feat: 活跃用户查询API
